--- a/horario.html
+++ b/horario.html
@@ -74,7 +74,7 @@
 
 
     
-      <div class="hora">
+      <div class="top-bar" style="color: #fff;">
         
            <h1>HORÁRIO</h1>
       </div>
