--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="vai.css">
   <link rel="stylesheet" href="bulma.min.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
@@ -25,13 +26,23 @@
     width: 100%;
     color: white;
   }
+
+
+
   </style>
 <body>
 
 
   
     <div class="top-bar" id="clesio34">
+     <div class="tente">
+ 
+     </div>
         <ul>
+          <div id="some">
+          
+            <li><a href=""><ion-icon name="logo-instagram"></ion-icon></a></li>
+           </div>
             <li><a href=""><ion-icon name="logo-facebook"></ion-icon></a></li>
             <li><a href="https://www.google.com/search?q=twi&rlz=1C1GCEU_pt-BRAO965AO965&oq=twi&aqs=chrome..69i57j46i131i199i433i465i512j0i131i433i512j0i433i512j0i512l2j69i61l2.2672j0j7&sourceid=chrome&ie=UTF-8"><ion-icon name="logo-twitter"></ion-icon></a></li>
             <li><a href=""><ion-icon name="logo-instagram"></ion-icon></a></li>
@@ -41,36 +52,38 @@
         </ul>
     </div>
 <!--menu-->
-    <nav class="navbar navbar-expand-lg navbar-light ">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img class="logo" id="letra" src="img/images-(4).png" alt=""></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" id="texte" aria-current="page" href="index.html">HOME</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" id="texte" href="quem.html">QUEM SOMOS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" id="texte" href="missa.html">MISSÃO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" id="texte" href="horario.html" tabindex="-1" aria-disabled="true">HORÁRIO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" id="texte" href="portal.html" tabindex="-1" aria-disabled="true">PORTAL DE TRANSPARÊNCIA</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" id="texte" href="contato.html" tabindex="-1" aria-disabled="true">CONTACTO</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+<nav class="navbar navbar-expand-lg navbar-light ">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"><img class="logo" id="letra" src="img/images-(4).png" alt=""></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" id="texte" aria-current="page" href="index.html">HOME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" id="texte" href="quem.html">QUEM SOMOS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" id="texte" href="missa.html">MISSÃO</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" id="texte" href="horario.html" tabindex="-1" aria-disabled="true">HORÁRIO</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" id="texte" href="portal.html" tabindex="-1" aria-disabled="true">PORTAL DE TRANSPARÊNCIA</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" id="texte" href="contato.html" tabindex="-1" aria-disabled="true">CONTACTO</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
 
 
 
@@ -462,7 +475,7 @@
 
 
 
-
+<script src="js/bootstrap.min.js"></script>
 
     </script>
     <!-- JavaScript Bundle with Popper -->
