--- a/horario.html
+++ b/horario.html
@@ -90,6 +90,7 @@
 
     </div>
 
+    <iframe class="mt-5" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15767.223134772821!2d13.185581449999997!3d-8.89764095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sao!4v1662642724832!5m2!1spt-BR!2sao" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     <hr>
 
