--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="vai.css">
   <link rel="stylesheet" href="bulma.min.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+  
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
@@ -54,7 +54,7 @@
 <!--menu-->
 <nav class="navbar navbar-expand-lg navbar-light ">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img class="logo" id="letra" src="img/images-(4).png" alt=""></a>
+    <a class="navbar-brand" href="#"><img class="logo" id="letra" src="img/22222.png" alt=""></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -76,7 +76,7 @@
           <a class="nav-link active" id="texte" href="portal.html" tabindex="-1" aria-disabled="true">PORTAL DE TRANSPARÊNCIA</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" id="texte" href="contato.html" tabindex="-1" aria-disabled="true">CONTACTO</a>
+          <a class="nav-link active" id="texte" href="contato.php" tabindex="-1" aria-disabled="true">CONTACTO</a>
         </li>
       </ul>
     </div>
@@ -130,9 +130,6 @@
 <!--corpo do projecto-->
 
 
-<div class="top-bar " >
-<h2>LAR DE CARIDADE </h2>
-</div>
 
 
 <!--<section>
@@ -166,7 +163,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 section-title text-center">
-        <h3>BEM VINDO AO </h3>
+        <h3>SEJA BEM VINDO</h3>
         <h3>LAR DE CARIDADE</h3>
         <p>conheça nossa estrutura, ambiente e o trabalho desenvolvido em favor dos idosos acolhidos</p>
         <span class="section-title-line"></span> </div>
@@ -174,12 +171,12 @@
         <div class="section-info">
           <div class="sub-title-paragraph">
             <h4>You can conquer the world.</h4>
-            <h5> O Lar da Caridade de Vinhedo é uma Instituição de Longa Permanência para Idosos. Associação de direito privado, sem fins lucrativos/econômicos, filantrópica, sem distribuição de resultados sob qualquer forma. Fundada em 26.06.1969 com início de atividade em 26.06.1972 .</h5>
+            <h5> O Lar da Caridade de Vinhedo é uma Instituição de Longa Permanência para Idosos. Associação de direito privado, sem fins lucrativos</h5>
             CRITÉRIOS DE ATENDIMENTO</h2>
 
             <p>Acolhimento do idoso, através do CREAS,  na modalidade de Instituição  de longa permanência ( ILPI), com assistência integral ( 24 horas). Idade mínima 60 anos , não portador de moléstias infecto-contagiosa , priorizando os mais vulneráveis e sem família ou que não tenha condições para manter-se sozinho ; sem distinção de raça , nacionalidade , classe social , credo político ou religioso .</p>
           </div>
-          <a href="quem.html" class="anchor-btn">entrar<i class="fas fa-arrow-right pd-lt-10"></i></a> </div>
+          <a href="quem.html" class="anchor-btn">Entrar<i class="fas fa-arrow-right pd-lt-10"></i></a> </div>
       </div>
       <div class="col-md-6 mb-50">
         <div class="section-img"> <img style="height: 24em;" src="imgem/Rosa.png" alt="" class="img-responsive"/> </div>
@@ -192,7 +189,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 section-title text-center">
-        <h3>Conheça as nossas casa</h3>
+        <h3>ACTIVIDADES</h3>
         <p>Vestibulum elementum dui tempus dolor gravida, vel mattis erat fermentum.</p>
         <span class="section-title-line"></span> </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
@@ -201,6 +198,7 @@
           <div class="icon-text">
             <h4 class="title-box">Chart Line</h4>
             <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+            <div class="btn" style="color: rgb(255, 255, 255); background-color:#328CC1;"><a style="color:white;" href="quem.html">Saiba mais</a></div>
           </div>
         </div>
       </div>
@@ -210,6 +208,7 @@
           <div class="icon-text">
             <h4 class="title-box">Quick Anouncement</h4>
             <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+            <div class="btn" style="color: rgb(255, 255, 255); background-color:#328CC1;"><a style="color:white;" href="quem.html">Saiba mais</a></div>
           </div>
         </div>
       </div>
@@ -219,6 +218,7 @@
           <div class="icon-text">
             <h4 class="title-box">Mark Location</h4>
             <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+            <div class="btn" style="color: rgb(255, 255, 255); background-color:#328CC1;"><a style="color:white;" href="quem.html">Saiba mais</a></div>
           </div>
         </div>
       </div>
@@ -228,6 +228,7 @@
           <div class="icon-text">
             <h4 class="title-box">Bug Solution</h4>
             <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+            <div class="btn" style="color: rgb(255, 255, 255); background-color:#328CC1;"><a style="color:white;" href="quem.html">Saiba mais</a></div>
           </div>
         </div>
       </div>
@@ -237,6 +238,37 @@
           <div class="icon-text">
             <h4 class="title-box">Fast Communication</h4>
             <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+            <div class="btn" style="color: rgb(255, 255, 255); background-color:#328CC1;"><a style="color:white;" href="quem.html">Saiba mais</a></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
+        <div class="service-box bg-white text-center">
+          <div class="icon"  id="icon2"> <img src="imgem/bem-me-care-casa-de-repouso-sp-foto7.jpg" alt=""></div>
+          <div class="icon-text">
+            <h4 class="title-box">Fast Communication</h4>
+            <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+            <div class="btn" style="color: rgb(255, 255, 255); background-color:#328CC1;"><a style="color:white;" href="quem.html">Saiba mais</a></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
+        <div class="service-box bg-white text-center">
+          <div class="icon"  id="icon2"> <img src="imgem/bem-me-care-casa-de-repouso-sp-foto7.jpg" alt=""></div>
+          <div class="icon-text">
+            <h4 class="title-box">Fast Communication</h4>
+            <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+            <div class="btn" style="color: rgb(255, 255, 255); background-color:#328CC1;"><a style="color:white;" href="quem.html">Saiba mais</a></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
+        <div class="service-box bg-white text-center">
+          <div class="icon"  id="icon2"> <img src="imgem/bem-me-care-casa-de-repouso-sp-foto7.jpg" alt=""></div>
+          <div class="icon-text">
+            <h4 class="title-box">Fast Communication</h4>
+            <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+            <div class="btn" style="color: rgb(255, 255, 255); background-color:#328CC1;"><a style="color:white;" href="quem.html">Saiba mais</a></div>
           </div>
         </div>
       </div>
@@ -246,6 +278,7 @@
           <div class="icon-text">
             <h4 class="title-box">Clean Design</h4>
             <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+            <div class="btn" style="color: rgb(255, 255, 255); background-color:#328CC1;"><a style="color:white;" href="quem.html">Saiba mais</a></div>
           </div>
         </div>
       </div>
@@ -267,30 +300,29 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 section-title text-center">
-        <h3>Contact Us For More</h3>
-        <p>Vestibulum elementum dui tempus dolor gravida, vel mattis erat fermentum.</p>
+        
         <span class="section-title-line"></span> </div>
       <div class="col-lg-5 col-md-4">
         <div class="part-info">
           <div class="info-box">
             <div class="icon"> <i class="fas fa-phone"></i> </div>
             <div class="content">
-              <h4>Phone :</h4>
-              <p>0123456789</p>
+              <h6>Telefone:</h6>
+              <p>945356258</p>
             </div>
           </div>
           <div class="info-box">
             <div class="icon"> <i class="fas fa-map-marker-alt"></i> </div>
             <div class="content">
-              <h4>Address :</h4>
-              <p>New Delhi, India</p>
+              <h6>Endereço:</h6>
+              <p>Angola Luanda</p>
             </div>
           </div>
           <div class="info-box">
             <div class="icon"> <i class="fas fa-envelope"></i> </div>
             <div class="content">
-              <h4>Mail :</h4>
-              <p><a href="#">info@123.com</a></p>
+              <h6>Email:</h6>
+              <p><a style="color: black;" href="#">cs0571275@gmail.com</a></p>
             </div>
           </div>
         </div>
@@ -351,7 +383,7 @@
       <!--footer-->
 
       <!-- Footer -->
-<footer class="text-center text-lg-start  text-muted" style="background-color:#4ABDAC; ">
+<footer class="text-center text-lg-start  text-muted" style="background-color:#328CC1;">
     <!-- Section: Social media -->
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <!-- Left -->
@@ -386,7 +418,7 @@
             <h6 style="color: white;" class="text-uppercase fw-bold mb-4">
               <i class="fas fa-gem me-3"></i>Lar de Caridade
             </h6>
-            <img src="img/images-(4).png"id="ccc" alt="">
+            <img src="img/22222.png" style="border-radius: 50%;" id="ccc" alt="">
           </div>
           <!-- Grid column -->
   
@@ -453,7 +485,7 @@
  
   <!-- carlos  Cor -->
     <!-- Copyright -->
-    <div class="text-center p-4" style="background:#4abdac; color: white;">
+    <div class="text-center p-4" style="background:#328CC1; color: white;">
       © 2021 Copyright:
       <a class="text-reset fw-bold" href="https://mdbootstrap.com/" style="text-decoration:none;">LarCaridade.com</a>
       <ion-icon name="qr-code-outline" ></ion-icon>
@@ -475,7 +507,6 @@
 
 
 
-<script src="js/bootstrap.min.js"></script>
 
     </script>
     <!-- JavaScript Bundle with Popper -->
