--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
           <div class="carousel-item active">
             <img src="img/MicrosoftTeams-image (5).png" id="image1"    class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h3>Amor ao Proxímo</h3>
+              <h2>Amor ao Próximo</h2>
               <p class="outro">Junte-se a Nós.</p>
             </div>
           </div>
