--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 <body>
 
 
+
+
   
     <div class="top-bar" id="clesio34">
      <div class="tente">
@@ -68,7 +70,10 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
       <div class="animate__animated animate__backInLeft">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" id="texte" aria-current="page" href="index.html">HOME</a>
+          <a class="nav-link active" id="texte" aria-current="page" href="index.html"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+            <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
+          </svg> LAR DE CARIDADE</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" id="texte" href="quem.html">QUEM SOMOS</a>
@@ -80,7 +85,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
           <a class="nav-link active" id="texte" href="horario.html" tabindex="-1" aria-disabled="true">HORÁRIO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" id="texte" href="portal.html" tabindex="-1" aria-disabled="true">PORTAL DE TRANSPARÊNCIA</a>
+          <a class="nav-link active" id="texte" href="portal.html" tabindex="-1" aria-disabled="true">AGENDA SUA VISITA</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" id="texte" href="contato.php" tabindex="-1" aria-disabled="true">CONTACTO</a>
@@ -204,7 +209,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   <div class="container">
     <div class="row">
       <div class="col-md-12 section-title text-center">
-        <h3>ACTIVIDADES</h3>
+        <h3>GALERIA</h3>
         <p>Vestibulum elementum dui tempus dolor gravida, vel mattis erat fermentum.</p>
         <span class="section-title-line"></span> </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
@@ -501,7 +506,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   <!-- carlos  Cor -->
     <!-- Copyright -->
     <div class="text-center p-4" style="background:#328CC1; color: white;">
-      © 2021 Copyright:
+      © 2022 Copyright:
       <a class="text-reset fw-bold" href="https://mdbootstrap.com/" style="text-decoration:none;">LarCaridade.com</a>
       <ion-icon name="qr-code-outline" ></ion-icon>
     </div>
