--- a/missa.html
+++ b/missa.html
@@ -48,7 +48,10 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" id="texte" aria-current="page" href="index.html">HOME</a>
+                <a class="nav-link active" id="texte" aria-current="page" href="index.html"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+                  <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
+                </svg> LAR DE CARIDADE</a></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" id="texte" href="quem.html">QUEM SOMOS</a>
@@ -227,7 +230,7 @@
       <!-- carlos  Cor -->
         <!-- Copyright -->
         <div class="text-center p-4" style="background:#328CC1; color: white;">
-          © 2021 Copyright:
+          © 2022 Copyright:
           <a class="text-reset fw-bold" href="https://mdbootstrap.com/" style="text-decoration:none;">LarCaridade.com</a>
           <ion-icon name="qr-code-outline" ></ion-icon>
         </div>
