--- a/portal.html
+++ b/portal.html
@@ -101,6 +101,7 @@
   <a class="link_anc" href="pdf/estatuto-social-lar-da-caridade.pdf" download><div class="item2">ESTATUTO SOCIAL</div></a> 
   <a class="link_anc" href="pdf/regimento-interno.pdf" download> <div class="item2">REGIMENTO INTERNO</div></a> 
     <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <div class="item2"> ATA DA ATUAL DIRETORIA</div></a> 
+    <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt=""></a> 
 </div>
 
 
