--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@1,700&family=Open+Sans:ital,wght@0,500;0,600;1,500&family=Yellowtail&display=swap" rel="stylesheet">
 </head>
 <style>
- 
-
-  </style>
+  .navbar-expand-lg{
+    min-height: 8em;
+  }
+</style>
 <body>
 
 <!--botao subir-->
