--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 <body>
 
 
-
   <div class="containerss top-bar" >
     <div>
      <ion-icon  class="anco" name="mail"></ion-icon>
@@ -56,28 +55,25 @@
           <a class="nav-link active" id="texte" aria-current="page" href="index.html"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
             <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
-          </svg> LAR DE CARIDADE</a>
+          </svg>Lar de caridade</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" id="texte" href="quem.html">QUEM SOMOS</a>
+          <a class="nav-link active" id="texte" href="quem.html">Quem somos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" id="texte" href="missa.html">MISSÃO</a>
+          <a class="nav-link active" id="texte" href="missa.html">Missão</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" id="texte" href="portal.html" tabindex="-1" aria-disabled="true">PORTAL DE TRANSPARÊNCIA</a>
+          <a class="nav-link active" id="texte" href="portal.html" tabindex="-1" aria-disabled="true">Portal de transparência</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" id="texte" href="contato.php" tabindex="-1" aria-disabled="true">CONTACTO</a>
+          <a class="nav-link active" id="texte" href="contato.php" tabindex="-1" aria-disabled="true">Contacto</a>
         </li>
       </ul>
     </div>  
     </div>
   </div>
 </nav>
-
-
-
 
 
 
@@ -106,7 +102,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/MicrosoftTeams-image (6).png"   class="d-block w-100" alt="...">
+            <img src="img/MicrosoftTeams-image (6).png"   class="d-block w-100" alt=" imagem">
             <div class="carousel-caption d-none d-md-block">
               <h5>Praticando o Gesto do Amor </h5>
               <p class="outro">Fazer o Bem Faz bem!</p>
@@ -186,6 +182,7 @@
           </div>
         </div>
       </div>
+      
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box bg-white text-center">
           <div class="icon"  id="icon2"> <img src="imgem/pexels-matthias-zomer-339620.jpg" alt=""></div>
@@ -272,7 +269,7 @@
             <div class="icon"> <i class="fas fa-phone"></i> </div>
             <div class="content">
               <h6>Telefone:</h6>
-              <p>945356258</p>
+              <p>921520234</p>
             </div>
           </div>
           <div class="info-box">
@@ -286,7 +283,7 @@
             <div class="icon"> <i class="fas fa-envelope"></i> </div>
             <div class="content">
               <h6>Email:</h6>
-              <p><a style="color: black;" href="#">cs0571275@gmail.com</a></p>
+              <p><a style="color: black;" href="#">Lardeidosos@gmail.com</a></p>
             </div>
           </div>
         </div>
@@ -312,11 +309,11 @@
                 </div>
                 <div class="col-lg-12">
                   <div class="form-group">
-                    <input id="form_subject" type="text" name="subject" placeholder="Subject">
+                    <input id="form_subject" type="text" name="subject" placeholder="Subject*">
                   </div>
                 </div>
                 <div class="col-lg-12 form-group">
-                  <textarea id="form_message" name="message" class="form-control" placeholder=" Type Your Message " rows="4" required data-error="Please,leave us a message."></textarea>
+                  <textarea id="form_message" name="message" class="form-control" placeholder=" Type Your Message* " rows="4" required data-error="Please,leave us a message."></textarea>
                   <div class="help-block with-errors"></div>
                 </div>
                 <div class="col-lg-12 text-center">
