--- a/missa.html
+++ b/missa.html
@@ -181,7 +181,7 @@
                 <h6 style="color: white;" class="text-uppercase fw-bold mb-4">
                   Produtos de Doação
                 </h6>
-                <p style="color: white;">
+                <p style="color: white; text-align: center;">
                   <a  style="color: white; text-decoration:none;" href="#!" class="text-reset">Alimentos</a>
                 </p>
                 <p style="color: white;">
