--- a/quem.html
+++ b/quem.html
@@ -28,37 +28,40 @@
     </ul>
 </div>
 <!--menu-->
-    <nav class="navbar navbar-expand-lg navbar-light ">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img class="logo" id="letra" src="img/22222.png" alt=""></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" id="texte" aria-current="page" href="index.html"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
-                  <path fill-rule="evenodd" d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
-                  <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
-                </svg> Lar e caridade</a></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" id="texte" href="quem.html">Quem Somos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" id="texte" href="missa.html">Missão</a>
-              </li>
-            
-              <li class="nav-item">
-                <a class="nav-link active" id="texte" href="portal.html" tabindex="-1" aria-disabled="true">Portal de Transparência</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" id="texte" href="contato.php" tabindex="-1" aria-disabled="true">Contacto</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>   
+    
+<nav class="navbar navbar-expand-lg navbar-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"><img class="logo" id="letra" src="img/22222.png" alt=""></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav" >
+      <div class="animate__animated animate__backInLeft">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" id="texte" aria-current="page" href="index.html"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+            <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
+          </svg> Lar de caridade</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" id="texte" href="quem.html">Quem Somos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" id="texte" href="missa.html">Missão</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" id="texte" href="portal.html" tabindex="-1" aria-disabled="true">Portal de Transparência</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" id="texte" href="contato.php" tabindex="-1" aria-disabled="true">Contacto</a>
+        </li>
+      </ul>
+    </div>  
+    </div>
+  </div>
+</nav>
+
       <!--carrosel-->
 <!-- *****************************        Corpo do projecto do Carlos.Rosa     ********************************* -->
   <div class="top-bar" style="color: white;">
