--- a/quem.html
+++ b/quem.html
@@ -14,7 +14,9 @@
 <link rel="stylesheet" href="quem.css">
 </head>
 <style>
-
+  .navbar-expand-lg{
+   min-height: 8em;
+  }
 </style>
 <body>
   <div class="top-bar" id="clesio34"> 
@@ -29,7 +31,7 @@
 </div>
 <!--menu-->
     
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg navbar-light" style="">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><img class="logo" id="letra" src="img/22222.png" alt=""></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
