--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Vanue:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <style>
   .navbar-expand-lg{
@@ -454,12 +454,12 @@ document.getElementById("defaultOpen").click();
 <iframe id="ifra." src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3671.6235612411197!2d-46.965768000000004!3d-23.03759!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x79c4bea175a9c8af!2sLar%20da%20Caridade%20de%20Vinhedo!5e0!3m2!1spt-BR!2sus!4v1662038088074!5m2!1spt-BR!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
-<a href="https://api.whatsapp.com/send?phone=+2449911304158&text=Olá!%20Encontrei%20seu%20site%20na%20Internet%20e%20preciso%20de%20seus%20serviços." class="float" target="_blank" onclick="goog_report_conversion('https://api.whatsapp.com/send?phone=+244991130415&text=Olá!%20Entrei%20em%20seu%20site%20e%20preciso%20de%20seus%20serviços.')">
+<a href="https://api.whatsapp.com/send?phone=991130415&text=Olá!%20Encontrei%20seu%20site%20na%20Internet%20e%20preciso%20de%20seus%20serviços." class="float" target="_blank" onclick="goog_report_conversion('https://api.whatsapp.com/send?phone=991130415&text=Olá!%20Entrei%20em%20seu%20site%20e%20preciso%20de%20seus%20serviços.')">
   <i class="fa fa-whatsapp my-float"></i>
   </a>
 
   <style>
-    .float{left:25px; position:fixed; width:6px; height:60px; bottom:40px; background-color:#25d366; color:#FFF;border-radius:50px; text-align:center; font-size:30px; box-shadow: 2px 2px 3px #999; z-index:100;}
+    .float{left:25px; position:fixed; width:60px; height:60px; bottom:40px; background-color:#25d366; color:#FFF;border-radius:50px; text-align:center; font-size:30px; box-shadow: 2px 2px 3px #999; z-index:100;}
     .my-float{margin-top:16px;}
 </style>
 
